added chart and homepag

--- a/src/Theme/variables.scss
+++ b/src/Theme/variables.scss
@@ -1,10 +1,10 @@
 
 
 $primary-font: 'Open Sans', sans-serif;
-$secondary-font: 'Oswald', sans-serif;
+$secondary-font: 'Montserrat', sans-serif;
 
-$primary-color: #000;
-$secondary-color: #fff;
+$primary-color: #434343;
+$secondary-color: #3F3F3F;
 
 $primary-font-color: #000;
 $secondary-font-color: #fff;
