--- a/src/App/Components/Home/style.scss
+++ b/src/App/Components/Home/style.scss
@@ -46,5 +46,31 @@ header{
 
 section#team{
   height: 100vh;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  padding: 30px 130px;
 
+  & h1{
+    margin-bottom: 40px;
+    font-family: $secondary-font;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 64px;
+    line-height: 64px;
+  }
+
+  & p {
+    font-family: $secondary-font;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 24px;
+    line-height: 24px;
+    margin-bottom: 40px;
+    width: 70%;
+  }
+
+  & img {
+    height: 700px;
+  }
 }
